# test-github-cicd

./: .gitignore  CICD_GUIDE.md  CMakeLists.txt  LICENSE  README.md  RELEASE_GUIDE.md  TRIGGER_TEST.md  local_build.bat  local_build.sh
.github/workflows/: ci.yml  publish-report.yml
docs/: README.md  RELEASE_GUIDE.md  WORKFLOWS_GUIDE.md
src/: calculator.cpp  calculator.h  main.cpp
tests/: test_calculator.cpp
